--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   mongo_dart: 0.10.1
   http: ^1.2.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
